--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
+    "npm": "^6.4.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "tailwindcss": "^0.6.6"
   }
 }
