--- a/package.json
+++ b/package.json
@@ -4,30 +4,41 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-message": "babel-node tools/startMessage.js",
+    "prestart": "npm run start-message",
+    "start": "concurrently -k -r -s first \"npm run open:src\" \"npm run lint:watch\"",
+    "open:src": "babel-node tools/srcServer.js",
+    "open:dist": "babel-node tools/distServer.js",
+    "lint": "esw webpack.config.* src tools --color",
+    "lint:watch": "npm run lint -- --watch",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "rimraf ./dist",
+    "prebuild": "npm run lint && npm run test && npm run clean-dist",
+    "build": "babel-node tools/build.js && npm run open:dist",
+    "dev": "webpack-dev-server --config webpack.dev.js"
   },
   "browserslist": {
     "production": [
-        "> 1%",
-        "last 2 versions",
-        "Firefox ESR"
+      "> 1%",
+      "last 2 versions",
+      "Firefox ESR"
     ],
     "legacyBrowsers": [
-        "> 1%",
-        "last 2 versions",
-        "Firefox ESR"
+      "> 1%",
+      "last 2 versions",
+      "Firefox ESR"
     ],
     "modernBrowsers": [
-        "last 2 Chrome versions",
-        "not Chrome < 60",
-        "last 2 Safari versions",
-        "not Safari < 10.1",
-        "last 2 iOS versions",
-        "not iOS < 10.3",
-        "last 2 Firefox versions",
-        "not Firefox < 54",
-        "last 2 Edge versions",
-        "not Edge < 15"
+      "last 2 Chrome versions",
+      "not Chrome < 60",
+      "last 2 Safari versions",
+      "not Safari < 10.1",
+      "last 2 iOS versions",
+      "not iOS < 10.3",
+      "last 2 Firefox versions",
+      "not Firefox < 54",
+      "last 2 Edge versions",
+      "not Edge < 15"
     ]
   },
   "repository": {
@@ -41,72 +52,143 @@
     "url": "https://github.com/ClustersTeam/react-frontend-starter-kit/issues"
   },
   "homepage": "https://github.com/ClustersTeam/react-frontend-starter-kit#readme",
-  "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "autoprefixer": "^9.1.5",
-    "babel-loader": "^8.0.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "create-symlink-webpack-plugin": "^1.0.0",
-    "critical": "^1.3.4",
-    "critical-css-webpack-plugin": "^0.2.0",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.1.0",
-    "dotenv": "^6.1.0",
-    "file-loader": "^2.0.0",
-    "git-rev-sync": "^1.12.0",
-    "glob-all": "^3.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "ignore-loader": "^0.1.2",
-    "imagemin": "^6.0.0",
-    "imagemin-gifsicle": "^5.2.0",
-    "imagemin-mozjpeg": "^7.0.0",
-    "imagemin-optipng": "^5.2.1",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webp": "^4.1.0",
-    "imagemin-webp-webpack-plugin": "^1.0.2",
-    "img-loader": "^3.0.1",
-    "mini-css-extract-plugin": "^0.4.3",
-    "moment": "^2.22.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss": "^7.0.2",
-    "postcss-extend": "^1.0.5",
-    "postcss-hexrgba": "^1.0.1",
-    "postcss-import": "^12.0.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.1.0",
-    "postcss-nested-ancestors": "^2.0.0",
-    "postcss-simple-vars": "^5.0.1",
-    "purgecss-webpack-plugin": "^1.3.0",
-    "purgecss-whitelister": "^2.2.0",
-    "resolve-url-loader": "^3.0.0",
-    "sane": "^4.0.1",
-    "save-remote-file-webpack-plugin": "^1.0.0",
-    "style-loader": "^0.23.0",
-    "symlink-webpack-plugin": "^0.0.4",
-    "terser-webpack-plugin": "^1.1.0",
-    "webapp-webpack-plugin": "https://github.com/brunocodutra/webapp-webpack-plugin.git",
-    "webpack": "^4.19.1",
-    "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dashboard": "^2.0.0",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.1.4",
-    "webpack-notifier": "^1.6.0",
-    "workbox-webpack-plugin": "^3.6.2"
-  },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "axios": "^0.18.0",
-    "npm": "^6.4.1",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "tailwindcss": "^0.6.6"
+    "connected-react-router": "4.4.1",
+    "object-assign": "4.1.1",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.3.1",
+    "redux": "4.0.0",
+    "redux-thunk": "2.3.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/node": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-transform-react-constant-elements": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "autoprefixer": "9.1.3",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.4.2",
+    "babel-loader": "8.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.15",
+    "browser-sync": "2.24.7",
+    "chalk": "2.4.1",
+    "concurrently": "4.0.1",
+    "connect-history-api-fallback": "1.5.0",
+    "coveralls": "3.0.2",
+    "css-loader": "1.0.0",
+    "cssnano": "4.1.0",
+    "enzyme": "3.5.0",
+    "enzyme-adapter-react-16": "1.3.1",
+    "eslint": "5.4.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-react": "7.11.1",
+    "eslint-watch": "4.0.2",
+    "file-loader": "2.0.0",
+    "hard-source-webpack-plugin": "0.12.0",
+    "history": "4.7.2",
+    "html-webpack-plugin": "3.2.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "23.5.0",
+    "jest-cli": "23.5.0",
+    "json-loader": "0.5.7",
+    "mini-css-extract-plugin": "0.4.2",
+    "mockdate": "2.0.2",
+    "node-sass": "4.9.3",
+    "opn-cli": "3.1.0",
+    "postcss-loader": "3.0.0",
+    "prompt": "1.0.0",
+    "prop-types": "15.6.2",
+    "raf": "3.4.0",
+    "react-hot-loader": "4.3.5",
+    "react-test-renderer": "16.4.2",
+    "redux-immutable-state-invariant": "2.1.0",
+    "redux-mock-store": "1.5.3",
+    "replace": "1.0.0",
+    "rimraf": "2.6.2",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.0",
+    "url-loader": "1.1.1",
+    "webpack": "4.17.1",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-dev-middleware": "3.2.0",
+    "webpack-hot-middleware": "2.22.3"
+  },
+  "babel": {
+    "env": {
+      "development": {
+        "presets": [
+          "@babel/preset-env",
+          "@babel/preset-react"
+        ],
+        "plugins": [
+          "@babel/plugin-proposal-class-properties",
+          "react-hot-loader/babel"
+        ]
+      },
+      "production": {
+        "presets": [
+          [
+            "@babel/preset-env",
+            {
+              "targets": {
+                "ie": 9
+              },
+              "forceAllTransforms": true
+            }
+          ],
+          "@babel/preset-react"
+        ],
+        "plugins": [
+          "@babel/plugin-proposal-class-properties",
+          "@babel/plugin-transform-react-constant-elements",
+          "transform-react-remove-prop-types"
+        ]
+      },
+      "test": {
+        "presets": [
+          "@babel/preset-env",
+          "@babel/preset-react"
+        ],
+        "plugins": [
+          "@babel/plugin-proposal-class-properties"
+        ]
+      }
+    }
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "eslint:recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings",
+      "plugin:react/recommended"
+    ],
+    "plugins": [
+      "react"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true,
+        "experimentalObjectRestSpread": true
+      }
+    },
+    "env": {
+      "es6": true,
+      "browser": true,
+      "node": true,
+      "jquery": true,
+      "jest": true
+    },
+    "globals": {}
   }
 }
