--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "homepage": "https://github.com/ClustersTeam/react-frontend-starter-kit#readme",
   "dependencies": {
-    "connected-react-router": "4.4.1",
+    "connected-react-router": "^4.4.1",
     "object-assign": "4.1.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
