--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "remove-dist": "rimraf ./dist",
     "prebuild": "npm run lint && npm run test && npm run clean-dist",
     "build": "babel-node tools/build.js && npm run open:dist",
-    "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
+    "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
+    "test": "jest"
   },
   "browserslist": {
     "production": [
@@ -78,7 +79,7 @@
     "babel-jest": "23.4.2",
     "babel-loader": "8.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.15",
-    "browser-sync": "2.24.7",
+    "browser-sync": "^2.26.3",
     "chalk": "2.4.1",
     "concurrently": "4.0.1",
     "connect-history-api-fallback": "1.5.0",
