--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "remove-dist": "rimraf ./dist",
     "prebuild": "npm run lint && npm run test && npm run clean-dist",
     "build": "babel-node tools/build.js && npm run open:dist",
-    "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
+    "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
+    "test": "jest"
   },
   "browserslist": {
     "production": [
@@ -76,7 +77,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.4.2",
-    "babel-loader": "8.0.0",
+    "babel-loader": "^8.0.0-beta.6",
     "babel-plugin-transform-react-remove-prop-types": "0.4.15",
     "browser-sync": "^2.26.3",
     "chalk": "2.4.1",
