--- a/package.json
+++ b/package.json
@@ -19,30 +19,6 @@
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
     "test": "jest"
   },
-  "browserslist": {
-    "production": [
-      "> 1%",
-      "last 2 versions",
-      "Firefox ESR"
-    ],
-    "legacyBrowsers": [
-      "> 1%",
-      "last 2 versions",
-      "Firefox ESR"
-    ],
-    "modernBrowsers": [
-      "last 2 Chrome versions",
-      "not Chrome < 60",
-      "last 2 Safari versions",
-      "not Safari < 10.1",
-      "last 2 iOS versions",
-      "not iOS < 10.3",
-      "last 2 Firefox versions",
-      "not Firefox < 54",
-      "last 2 Edge versions",
-      "not Edge < 15"
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ClustersTeam/react-frontend-starter-kit.git"
@@ -55,7 +31,7 @@
   },
   "homepage": "https://github.com/ClustersTeam/react-frontend-starter-kit#readme",
   "dependencies": {
-    "connected-react-router": "^4.4.1",
+    "connected-react-router": "4.4.1",
     "object-assign": "4.1.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
@@ -65,30 +41,30 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0",
-    "@babel/core": "7.0.0",
+    "@babel/cli": "7.1.5",
+    "@babel/core": "7.1.5",
     "@babel/node": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/plugin-transform-react-constant-elements": "7.0.0",
     "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.0.0",
+    "@babel/preset-env": "7.1.5",
     "@babel/preset-react": "7.0.0",
-    "autoprefixer": "9.1.3",
+    "autoprefixer": "9.3.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "23.4.2",
-    "babel-loader": "^8.0.0-beta.6",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.15",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.4",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.20",
     "browser-sync": "^2.26.3",
     "chalk": "2.4.1",
     "concurrently": "4.0.1",
     "connect-history-api-fallback": "1.5.0",
     "coveralls": "3.0.2",
-    "css-loader": "1.0.0",
-    "cssnano": "4.1.0",
-    "enzyme": "3.5.0",
-    "enzyme-adapter-react-16": "1.3.1",
-    "eslint": "5.4.0",
+    "css-loader": "1.0.1",
+    "cssnano": "4.1.7",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.7.0",
+    "eslint": "5.9.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-react": "7.11.1",
     "eslint-watch": "4.0.2",
@@ -97,29 +73,43 @@
     "history": "4.7.2",
     "html-webpack-plugin": "3.2.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.5.0",
-    "jest-cli": "23.5.0",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
     "json-loader": "0.5.7",
-    "mini-css-extract-plugin": "0.4.2",
+    "mini-css-extract-plugin": "0.4.4",
     "mockdate": "2.0.2",
-    "node-sass": "4.9.3",
-    "opn-cli": "3.1.0",
+    "node-sass": "4.10.0",
+    "opn-cli": "4.0.0",
     "postcss-loader": "3.0.0",
+    "prompt": "1.0.0",
     "prop-types": "15.6.2",
-    "raf": "3.4.0",
-    "react-hot-loader": "4.3.5",
-    "react-test-renderer": "16.4.2",
+    "raf": "3.4.1",
+    "react-hot-loader": "4.3.12",
+    "react-test-renderer": "16.6.3",
     "redux-immutable-state-invariant": "2.1.0",
     "redux-mock-store": "1.5.3",
     "replace": "1.0.0",
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
-    "url-loader": "1.1.1",
-    "webpack": "4.17.1",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-dev-middleware": "3.2.0",
-    "webpack-hot-middleware": "2.22.3"
+    "style-loader": "0.23.1",
+    "url-loader": "1.1.2",
+    "webpack": "4.25.1",
+    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3"
+  },
+  "engines": {
+    "npm": ">=3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/assetsTransformer.js",
+      "\\.(css)$": "<rootDir>/tools/assetsTransformer.js"
+    },
+    "setupFiles": [
+      "raf/polyfill",
+      "./tools/enzymeTestAdapterSetup.js"
+    ]
   },
   "babel": {
     "env": {
