--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,12 @@ coverage
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
 #dist folder
-dist
+assets/dist
 
 # IDEA/Webstorm project files
 .idea
