--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chalk": "2.4.1",
     "concurrently": "4.0.1",
     "connect-history-api-fallback": "1.5.0",
+    "copy-webpack-plugin": "4.6.0",
     "coveralls": "3.0.2",
     "css-loader": "1.0.1",
     "cssnano": "4.1.7",
