--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "rimraf ./dist",
     "prebuild": "npm run lint && npm run test && npm run clean-dist",
-    "build": "babel-node tools/build.js && npm run open:dist",
+    "build": "babel-node tools/build.js",
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
     "test": "jest"
   },
