Add fonts folder and remove creation of empty dist folder

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* assets/src tools --color",
     "lint:watch": "npm run lint -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "rimraf ./dist",
+    "clean-dist": "npm run remove-dist && mkdir assets/dist",
+    "remove-dist": "rimraf assets/dist",
     "prebuild": "npm run lint && npm run test && npm run clean-dist",
     "build": "babel-node tools/build.js",
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
