--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* assets/src tools --color",
     "lint:watch": "npm run lint -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir assets/dist",
+    "clean-dist": "npm run remove-dist && mkdirp assets/dist",
     "remove-dist": "rimraf assets/dist",
     "prebuild": "npm run lint && npm run test && npm run clean-dist",
     "build": "babel-node tools/build.js",
@@ -77,6 +77,7 @@
     "jest-cli": "23.6.0",
     "json-loader": "0.5.7",
     "mini-css-extract-plugin": "0.4.4",
+    "mkdirp": "0.5.1",
     "mockdate": "2.0.2",
     "node-sass": "4.10.0",
     "opn-cli": "4.0.0",
